--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,26 @@
 ---
-# defaults file for .
+# defaults file for resultsdb
+# maybe
+# resultsdb_port: 5001
+# real
+# resultsdb_namespace: resultsdb
+  #   # resultsdb_db__url: ''
+
+resultsdb_namespace: gating-services
+resultsdb_amqp_url: amqps://resultsdb:@rabbitmq.fedoraproject.org/%2Fpubsub
+resultsdb_topic_prefix: org.stream.centos.prod
+resultsdb_secret_key: '12345'
+resultsdb_database_uri: ''
+resultsdb_additional_result_outcomes:
+  - CRASHED
+  - QUEUED
+  - RUNNING
+resultsdb_httpd_username: resultsdb
+resultsdb_httpd_password: resultsdb
+resultsdb_replicas: 1
+resultsdb_image_name: quay.io/fedora/resultsdb:latest
+resultsdb_image_pull_policy: Always
+resultsdb_fedora_messaging: true
+resultsdb_fedora_messaging_ca_path: ''
+resultsdb_fedora_messaging_crt_path: ''
+resultsdb_fedora_messaging_key_path: ''
