--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,4 +1,5 @@
 galaxy_info:
+  name: ansible-role-resultsdb
   author: your name
   description: your role description
   company: your company (optional)
