--- a/templates/backend/secrets.yaml
+++ b/templates/backend/secrets.yaml
@@ -7,8 +7,8 @@ metadata:
     app: resultsdb
 stringData:
   settings.py: |-
-    SECRET_KEY = '{{ resultsdb_secret_key }}'
-    SQLALCHEMY_DATABASE_URI = '{{ resultsdb_database_uri }}'
+    SECRET_KEY = '{{ resultsdb_backend_app_secret }}'
+    SQLALCHEMY_DATABASE_URI = '{{ resultsdb_backend_database_uri }}'
     FILE_LOGGING = False
     LOGFILE = '/var/log/resultsdb/resultsdb.log'
     SYSLOG_LOGGING = False
@@ -19,6 +19,6 @@ stringData:
     MESSAGE_BUS_PUBLISH_TASKOTRON = True
     MESSAGE_BUS_PLUGIN = 'fedmsg'
     MESSAGE_BUS_KWARGS = {'modname': 'resultsdb'}
-    ADDITIONAL_RESULT_OUTCOMES = {{ resultsdb_additional_result_outcomes }}
+    ADDITIONAL_RESULT_OUTCOMES = {{ resultsdb_backend_additional_result_outcomes }}
   .htpasswd: |-
-    {{ resultsdb_httpd_username }}:{{ resultsdb_httpd_password }}
+    {{ resultsdb_backend_httpd_username }}:{{ resultsdb_backend_httpd_password }}
