--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,4 +1,3 @@
----
 - name: Create resultsdb namespace
   k8s:
     api_version: v1
@@ -7,79 +6,10 @@
     state: present
     wait: true
 
-- name: Create resultsdb fedora-messaging ca secret
-  k8s:
-    definition:
-      api_version: v1
-      kind: Secret
-      metadata:
-        name: resultsdb-fedora-messaging-ca
-        namespace: "{{ resultsdb_namespace }}"
-        labels:
-          app: resultsdb
-      data:
-        resultsdb.ca: "{{ lookup('file', resultsdb_fedora_messaging_ca_path)  | b64encode }}"
-    wait: true
-  when:
-    - resultsdb_fedora_messaging == true
-    - resultsdb_fedora_messaging_ca_path
+- include_tasks: backend.yml
+  tags:
+    - resultsdb-backend
 
-- name: Create resultsdb fedora-messaging crt secret
-  k8s:
-    definition:
-      api_version: v1
-      kind: Secret
-      metadata:
-        name: resultsdb-fedora-messaging-crt
-        namespace: "{{ resultsdb_namespace }}"
-        labels:
-          app: resultsdb
-      data:
-        resultsdb.ca: "{{ lookup('file', resultsdb_fedora_messaging_crt_path)  | b64encode }}"
-    wait: true
-  when:
-    - resultsdb_fedora_messaging == true
-    - resultsdb_fedora_messaging_crt_path
-
-- name: Create resultsdb fedora-messaging key secret
-  k8s:
-    definition:
-      api_version: v1
-      kind: Secret
-      metadata:
-        name: resultsdb-fedora-messaging-key
-        namespace: "{{ resultsdb_namespace }}"
-        labels:
-          app: resultsdb
-      data:
-        resultsdb.ca: "{{ lookup('file', resultsdb_fedora_messaging_key_path)  | b64encode }}"
-    wait: true
-  when:
-    - resultsdb_fedora_messaging == true
-    - resultsdb_fedora_messaging_key_path
-
-- name: Create resultsdb secrets
-  k8s:
-    definition: "{{ lookup('template', 'secrets.yaml') }}"
-    wait: true
-
-- name: Create resultsdb configmaps
-  k8s:
-    definition: "{{ lookup('template', 'configmaps.yaml') }}"
-    wait: true
-
-- name: Create resultsdb deployment configs
-  k8s:
-    definition: "{{ lookup('template', 'deploymentconfigs.yaml') }}"
-    wait: true
-
-- name: Create resultsdb service
-  k8s:
-    definition: "{{ lookup('template', 'services.yaml') }}"
-    wait: true
-
-- name: Create resultsdb routes
-  k8s:
-    definition: "{{ lookup('template', 'routes.yaml') }}"
-    wait: true
-
+- include_tasks: frontend.yml
+  tags:
+    - resultsdb-frontend
